fixed alignment

--- a/frontend/src/components/_style.scss
+++ b/frontend/src/components/_style.scss
@@ -34,6 +34,6 @@ background-size: 929px 392px;
     .rain_icon {
         position: absolute;
         margin-left: 3px;
-        top: 9px;
+        top: 37px;
     }
 }
